レーティング機能を削除
