# ila-backend/src/main/kotlin/com/ila/zer0/controller/UsersController.kt
@@ -13,8 +13,6 @@ import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.security.core.Authentication
 import org.springframework.security.core.context.SecurityContextHolder
-import org.springframework.web.bind.annotation.PathVariable
-import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RestController
 
 @RestController
@@ -24,7 +22,7 @@ class UsersController(
     private val cognitoService: CognitoService,
     private val userMapper: UserMapper,
     private val workMapper: WorkMapper
-) : com.ila.zer0.generated.endpoint.UsersApi {
+) : UsersApi {
 
     private fun getUserId(): String? {
         val authentication: Authentication? =
@@ -72,22 +70,6 @@ class UsersController(
         return ResponseEntity.ok(apiLiked)
     }
 
-    // レーティング付与
-    override fun postUsersRatedByWorkdId(
-        @PathVariable workId: String,
-        @RequestBody apiRated: ApiRated
-    ): ResponseEntity<ApiRated> {
-        val userId =
-            getUserId() ?: return ResponseEntity(HttpStatus.UNAUTHORIZED)
-        val rated = userManagerService.registerUsersRated(
-            userId,
-            workId,
-            apiRated.rating ?: 0
-        )
-        val apiRatedResponse = userMapper.toApiRated(rated)
-        return ResponseEntity.ok(apiRatedResponse)
-    }
-
     // いいね削除
     override fun deleteUsersLikedByWorkdId(workId: String): ResponseEntity<ApiLiked> {
         val userId =
@@ -95,15 +77,6 @@ class UsersController(
         val liked = userManagerService.deleteUsersLiked(userId, workId)
         val apiLiked = userMapper.toApiLiked(liked)
         return ResponseEntity.ok(apiLiked)
-    }
-
-    // レーティング削除
-    override fun deleteUsersRatedByWorkdId(workId: String): ResponseEntity<ApiRated> {
-        val userId =
-            getUserId() ?: return ResponseEntity(HttpStatus.UNAUTHORIZED)
-        val rated = userManagerService.deleteUsersRated(userId, workId)
-        val apiRated = userMapper.toApiRated(rated)
-        return ResponseEntity.ok(apiRated)
     }
 
     // いいね取得
@@ -128,40 +101,13 @@ class UsersController(
         return ResponseEntity.ok(apiWorkWithDetails)
     }
 
-    // レーティング取得
-    override fun getUsersRated(
-        offset: Int,
-        limit: Int
-    ): ResponseEntity<ApiWorksWithSearchResult> {
-        val userId =
-            getUserId() ?: return ResponseEntity(HttpStatus.UNAUTHORIZED)
-        val ratedList =
-            userManagerService.getUsersRated(userId, offset, limit)
-
-        val apiWorks = mutableListOf<ApiWork>()
-        ratedList.works.forEach { work ->
-            val apiWork = workMapper.toApiWork(work)
-            apiWorks.add(apiWork)
-        }
-        val apiWorkWithDetails = ApiWorksWithSearchResult(
-            works = apiWorks,
-            totalCount = ratedList.totalCount ?: 0
-        )
-        return ResponseEntity.ok(apiWorkWithDetails)
-    }
-
     fun toApiUsersActivity(activityList: UsersActivity): ApiUsersActivity {
         val apiLiked = mutableListOf<ApiLiked>()
         activityList.liked.forEach { liked ->
             apiLiked.add(userMapper.toApiLiked(liked))
         }
-        val apiRated = mutableListOf<ApiRated>()
-        activityList.rated.forEach { rated ->
-            apiRated.add(userMapper.toApiRated(rated))
-        }
         return ApiUsersActivity(
-            apiLikeds = apiLiked,
-            apiRateds = apiRated
+            apiLikeds = apiLiked
         )
     }
 }
